# kete

./: .flake8  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docs-pr.yml  docs.yml  release-wheels.yml  test-lint.yml
doc/: background.rst  code_structure.rst  conf.py  index.rst  installation.rst  propagation.rst
doc/_static/: format.css  layout.html
doc/api/: api.rst  conversion.rst  core.rst  flux.rst  interface.rst  observatory.rst  population.rst  propagation.rst  time.rst
docs/: .gitattributes  Makefile  code_structure.rst  conf.py  index.rst  installation.rst  propagation.rst  utils.py
docs/api/: api.rst  cache.rst  constants.rst  conversion.rst  flux.rst  fov.rst  interface.rst  observatory.rst  population.rst  propagation.rst  spice.rst  time.rst  vector.rst
docs/data/: 01772a127-w3-int-1b.fits  20000042.bsp
docs/tutorials/: background.rst  background_plots.py  index.rst  kona.rst  neatm.rst  neatm_plots.py  palomar.rst  propagation.rst  propagation_plots.py  wise.rst
src/apohele/: cache.py  covariance.py  deprecation.py  fov.py  horizons.py  irsa.py  mpc.py  population.py  shape.py  spice.py  time.py  wise.py
src/apohele/rust/: covariance.rs  elements.rs  fitting.rs  frame.rs  horizons.rs  kepler.rs  lib.rs  nongrav.rs  propagation.rs  simult_states.rs  state.rs  state_transition.rs  time.rs  vector.rs
src/apohele/rust/flux/: common.rs  models.rs  reflected.rs
src/apohele/rust/fovs/: checks.rs  collection.rs  definitions.rs
src/apohele_core/: Cargo.toml  README.md
src/apohele_core/benches/: propagation.rs  spice.rs  thermal.rs
src/apohele_core/data/: readme.md
src/apohele_core/src/: errors.rs  lib.rs
src/examples/: README.rst  earth_trojan.py  galactic_center.py  getting_started.py  on_sky.py  plot_close_approach.py  plot_close_encounter.py  plot_comet.py  plot_elevation.py  plot_flux_vs_wavelength.py  plot_fov.py  plot_light_curve.py  plot_mpc_state.py  plot_observability.py  plot_phases.py  plot_thermal_model.py  plot_trojans.py  plot_uncertainty.py  solar_spectrum.py
src/kete/: __init__.py  cache.py  constants.py  conversion.py  covariance.py  deprecation.py  flux.py  fov.py  horizons.py  irsa.py  mpc.py  neos.py  plot.py  population.py  ptf.py  shape.py  spice.py  tap.py  time.py  vector.py  wise.py  ztf.py
src/kete/rust/: covariance.rs  elements.rs  fitting.rs  frame.rs  horizons.rs  kepler.rs  lib.rs  nongrav.rs  propagation.rs  simult_states.rs  state.rs  state_transition.rs  time.rs  vector.rs
src/kete_core/: Cargo.toml  README.md
src/kete_core/benches/: propagation.rs  spice.rs  thermal.rs
src/kete_core/data/: 20000001.bsp  20000002.bsp  20000004.bsp  20000010.bsp  mpc_obs.tsv  naif_ids.csv  readme.md
src/kete_core/src/: cache.rs  elements.rs  errors.rs  lib.rs  observation.rs  simult_states.rs  state.rs
src/kete_core/src/constants/: gravity.rs  neos.rs  universal.rs
src/kete_core/src/fitting/: halley.rs  lambert.rs  mod.rs  newton.rs  reduced_chi2.rs
src/kete_core/src/flux/: comets.rs  common.rs  frm.rs  mod.rs  neatm.rs  reflected.rs  shapes.rs  sun.rs
src/kete_core/src/fov/: fov_like.rs  generic.rs  mod.rs  neos.rs  patches.rs  ptf.rs  wise.rs  ztf.rs
src/kete_core/src/frames/: definitions.rs  mod.rs  vector.rs  wgs_84.rs
src/kete_core/src/io/: bytes.rs  mod.rs  obs_codes.rs  parquet.rs
src/kete_core/src/propagation/: acceleration.rs  kepler.rs  mod.rs  nongrav.rs  radau.rs  runge_kutta.rs  state_transition.rs
src/kete_core/src/spice/: binary.rs  daf.rs  interpolation.rs  mod.rs  naif_ids.rs  obs_codes.rs  pck.rs  pck_segments.rs  spice_frames.rs  spk.rs  spk_segments.rs
src/kete_core/src/stats/: ks_test.rs  quantile.rs
src/kete_core/src/time/: leap_second.rs  mod.rs  scales.rs
src/neospy/: __init__.py  cache.py  constants.py  conversion.py  covariance.py  data.py  deprecation.py  flux.py  fov.py  horizons.py  irsa.py  mpc.py  neos.py  pds.py  plot.py  population.py  power_law.py  propagation.py  shape.py  spice.py  state_transition.py  time.py  vector.py  wise.py  ztf.py
src/neospy/flux/: __init__.py  comet.py  common.py  reflected.py  shape.py  thermal.py
src/neospy/population/: __init__.py  definitions.py  diameters.py  main_belt.py  neas.py  power_law.py  utils.py
src/neospy/rust/: covariance.rs  elements.rs  fitting.rs  frame.rs  horizons.rs  kepler.rs  lib.rs  nongrav.rs  propagation.rs  simult_states.rs  spice.rs  state.rs  state_transition.rs  time.rs  vector.rs
src/neospy_core/: Cargo.toml  README.md
src/neospy_core/benches/: propagation.rs  spice.rs  thermal.rs
src/neospy_core/data/: 20000704.bsp  mpc_obs.tsv  readme  readme.md
src/neospy_core/src/: constants.rs  elements.rs  errors.rs  lib.rs  simult_states.rs  state.rs
src/neospy_core/src/constants/: gravity.rs  mod.rs  universal.rs  wise.rs
src/neospy_core/src/fitting/: newton.rs  reduced_chi2.rs
src/neospy_core/src/flux/: comets.rs  common.rs  frm.rs  mod.rs  neos.rs  reflected.rs  shapes.rs  wise.rs
src/neospy_core/src/fov/: contiguous_fov.rs  fov_like.rs  generic.rs  joint_fov.rs  mod.rs  neos.rs  patches.rs  wise.rs  ztf.rs
src/neospy_core/src/frames/: definitions.rs  mod.rs  vector.rs  wgs_84.rs
src/neospy_core/src/io/: mod.rs  obs_codes.rs  serde_const_arr.rs
src/neospy_core/src/propagation/: acceleration.rs  kepler.rs  mod.rs  nongrav.rs  radau.rs  runge_kutta.rs  state_transition.rs
src/neospy_core/src/spice/: binary.rs  daf.rs  interpolation.rs  mod.rs  naif_ids.rs  pck.rs  pck_segments.rs  records.rs  spk.rs  spk_segments.rs
src/neospy_core/src/stats/: mod.rs  quantile.rs
src/neospy_core/src/time/: leap_second.rs  mod.rs  scales.rs
src/tests/: conftest.py  test_conversion.py  test_horizons.py  test_mpc.py  test_population.py  test_propagation.py  test_shape.py  test_spice.py  test_state.py  test_time.py  test_vector.py  test_wise.py
src/tests/flux/: test_common.py  test_model.py  test_shape.py  test_util.py
src/tests/interface/: test_horizons.py  test_mpc.py
(+40 files in other folders)
