
[package]
name = "_core"
version = "0.2.5"
edition = "2021"


[dependencies]
apohele_core = { version = "*", path = "src/apohele_core", features=["pyo3"]}
pyo3 = { version =  "^0.22.1", features = ["extension-module"] }
serde = { version = "^1.0.203", features = ["derive"] }
nalgebra = {version = "^0.33.0"}
itertools = "^0.13.0"
rayon = "^1.10.0"
sgp4 = "2.2.0"

# bincode is pinned to ensure backward compatability with saved files, all updates to
# this version need to be validated that they are forward compatable.
bincode = {version = "2.0.0-rc.3", features=["derive", "serde"]}

[lib]
name = "_core"
path = "src/apohele/rust/lib.rs"
crate-type = ["cdylib"]

[workspace]
members = ["src/apohele_core"]
default-members = ["src/apohele_core"]

[profile.release]
opt-level = 3