[project]
name = "neospy"
version = "0.2.1"
description = "NEO Surveyor Simulation Tools"
readme = "README.md"
authors = [{name = "Dar Dahlen", email = "ddahlen@ipac.caltech.edu"},
           {name = "Joe Masiero", email = "jmasiero@ipac.caltech.edu"},
          ]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers=["Programming Language :: Python :: 3"]
dependencies = ["astropy>=5.3.4", "matplotlib", "numpy>=1.24",
                "pandas", "requests", "scipy", "matplotlib-label-lines",
                "pds4_tools @ https://github.com/Small-Bodies-Node/pds4_tools/tarball/master"]

[project.urls]
homepage = "https://github.com/IPAC-SW/neospy"

[build-system]
requires = ["maturin>=1.0",
            "wheel",
            ]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
module-name = "neospy._core"

[project.optional-dependencies]
dev = ["black>=23.1.0",
       "pytest",
       "pytest-cov",
       "sphinx",
       "autodoc",
       "sphinx-gallery",
       "mypy",
       "types-requests",
       "sphinx_rtd_theme",
       ]
docs = ["sphinx",
        "autodoc",
        "sphinx-gallery",
        "sphinx_rtd_theme",
        ]

# Options for pytest
[tool.pytest.ini_options]
testpaths = ["src/tests"]
markers = [
    "horizons: run JPL Horizons tests, requires an internet connection.",
]
# filterwarnings = "error"

# Options for the coverage report.
[tool.coverage.run]
omit = ["*/neospy/population/*",
        "*/neospy/mpc.py",
        "*/neospy/irsa.py",
        "*/neospy/wise.py",
        "*/neospy/ztf.py",
        "*/neospy/horizons.py",
        "*/neospy/pds.py",
        "*/neospy/data/*",
        "*/examples/*",]

# See https://github.com/psf/black/blob/main/pyproject.toml for more details
[tool.black]
line-length = 88
target_version = ["py39"]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
  )/
)
'''

[mypy]
plugins = "numpy.typing.mypy_plugin"