[project]
name = "apohele"
version = "0.2.5"
description = "NEO Surveyor Simulation Tools"
readme = "README.md"
authors = [{name = "Dar Dahlen", email = "ddahlen@ipac.caltech.edu"},
           {name = "Joe Masiero", email = "jmasiero@ipac.caltech.edu"},
          ]
license = {text = "BSD"}
requires-python = ">=3.9"
classifiers=["Programming Language :: Python :: 3"]
dependencies = ["astropy>=5.3.4",
                "matplotlib",
                "matplotlib-label-lines",
                "numpy>=1.24",
                "pandas",
                "requests",
                "scipy",
                ]

[project.urls]
homepage = "https://github.com/IPAC-SW/apohele"

[build-system]
requires = ["maturin>=1.0",
            "wheel",
            ]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
module-name = "apohele._core"

[project.optional-dependencies]
dev = ["black>=23.1.0",
       "pytest",
       "pytest-cov",
       "sphinx",
       "autodoc",
       "sphinx-gallery",
       "mypy",
       "types-requests",
       "sphinx_rtd_theme",
        "click",
       ]
docs = ["sphinx",
        "autodoc",
        "sphinx-gallery",
        "sphinx_rtd_theme",
        "click",
        ]

# Options for pytest
[tool.pytest.ini_options]
testpaths = ["src/tests"]
markers = [
    "horizons: run JPL Horizons tests, requires an internet connection.",
]
# filterwarnings = "error"

# Options for the coverage report.
[tool.coverage.run]
omit = ["*/apohele/mpc.py",
        "*/apohele/irsa.py",
        "*/apohele/wise.py",
        "*/apohele/ztf.py",
        "*/apohele/horizons.py",
        "*/apohele/data/*",
        "*/examples/*",]

# See https://github.com/psf/black/blob/main/pyproject.toml for more details
[tool.black]
line-length = 88
target_version = ["py39"]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
  )/
)
'''

[tool.pylint.imports]
ignored-modules=["_core", "apohele._core"]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
ignore_missing_imports = true