[package]
name = "kete_core"
version = "1.1.0"
edition = "2021"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["physics", "simulation", "astronomy"]

[lib]
name = "kete_core"

[dependencies]
argmin = "^0.10.0"
argmin-math = "^0.4.0"
chrono = "^0.4.38"
crossbeam = "^0.8.4"
directories = "^5.0"
itertools = "^0.14.0"
kdtree = "^0.7.0"
lazy_static = "^1.5.0"
nalgebra = {version = "^0.33.0"}
polars = {version = "0.45.1", optional=true, features=["parquet", "polars-io"]}
pathfinding = "^4.10.0"
pyo3 = { version =  "^0.24.1", optional=true}
rayon = "^1.10.0"
serde = { version = "^1.0.203", features = ["derive"] }
sgp4 = "^2.2.0"

# bincode is pinned to ensure backward compatability with saved files, all updates to
# this version need to be validated that they are forward compatable.
bincode = {version = "2.0.0-rc.3", features=["derive", "serde"]}

[dev-dependencies]
criterion = { version = "*", features = ["html_reports"] }

# pprof is used for flame graphs, this is failing on windows currently so only
# linux and mac are supported here.
[target.'cfg(target_os = "linux")'.dev-dependencies]
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }

# macos needs the frame-pointer flag, however this doesn't function on linux
[target.'cfg(target_os = "macos")'.dev-dependencies]
pprof = { version = "0.14", features = ["flamegraph", "criterion", "frame-pointer"] }

[[bench]]
name = "propagation"
harness = false

[[bench]]
name = "spice"
harness = false

[[bench]]
name = "thermal"
harness = false